# MisMatch

./: .gitignore  ARCHITECTURE.md  README.md  run.sh
.github/workflows/: keepalive.yml
client/: package-lock.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/chat/: page.tsx
client/app/community-guidelines/: page.tsx
client/app/privacy-policy/: page.tsx
client/app/report/: page.tsx
client/app/terms-of-service/: page.tsx
client/components/: Controls.tsx  StatusBanner.tsx  ThemeToggle.tsx  VideoGrid.tsx
client/lib/: signaling.ts  webrtc.ts
server/: Cargo.toml  Dockerfile  fly.toml  railway.toml
server/src/: main.rs  messages.rs  state.rs  ws.rs
