[package]
name = "mismatch-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mismatch-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server + WebSocket signaling
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Concurrent state
dashmap = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures-util = "0.3"
bytes = "1"
